fix(timepicker): font truncating issue

--- a/web-components/src/components/timepicker/scss/settings.scss
+++ b/web-components/src/components/timepicker/scss/settings.scss
@@ -3,7 +3,6 @@ $time-box-height: rem-calc(32);
 $timepicker-right-padding: rem-calc(0);
 $am-pm-combobox-width: rem-calc(42);
 $am-pm-combobox-left-margin: rem-calc(8);
-$am-pm-combobox-side-padding: rem-calc(7);
-$am-pm-combobox-dropdown-max-height: rem-calc(80);
+$am-pm-combobox-dropdown-max-height: rem-calc(90);
 $colon-side-margin: rem-calc(4);
 $colon-separator-font-size: rem-calc(20);
